[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/wasm/lib.rs"
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window"
]

[dependencies.winit]
version = "0.29.1-beta"
default-features = false
