[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "ResizeObserver",
  "ResizeObserverEntry",
  "ResizeObserverSize",
  "Window",
  "console",
]

[dependencies.winit]
version = "0.29.1-beta"
default-features = false
